--- a/reviews.html
+++ b/reviews.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>Reviews — ProfitPilot</title>
-  <meta name="description" content="Read real reviews for ProfitPilot. Submit a review after logging in.">
+  <meta name="description" content="Read public reviews for ProfitPilot. Log in to submit a review.">
   <link rel="icon" href="https://ukwebtools.com/favicon.svg" type="image/svg+xml">
 
   <style>
@@ -15,8 +15,8 @@
       --txt:#0b1220;
       --muted:#5b6474;
       --line:rgba(16,24,40,.10);
-      --accent:#0ea5a4;   /* teal */
-      --accent2:#4f46e5;  /* indigo */
+      --accent:#0ea5a4;
+      --accent2:#4f46e5;
       --shadow:0 10px 30px rgba(16,24,40,.08);
     }
     *{box-sizing:border-box}
@@ -31,9 +31,7 @@
     }
     a{color:var(--accent);text-decoration:none}
     .wrap{max-width:1100px;margin:18px auto;padding:0 14px}
-    .nav{
-      display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap
-    }
+    .nav{display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap}
     .brand{display:flex;gap:10px;align-items:center}
     .logo{
       width:40px;height:40px;border-radius:14px;
@@ -43,25 +41,20 @@
       font-weight:900;
     }
     .pill{
-      padding:8px 10px;border-radius:999px;
-      border:1px solid var(--line);
+      padding:8px 10px;border-radius:999px;border:1px solid var(--line);
       background:rgba(255,255,255,.7);
       font-size:12px;color:var(--muted);
       display:inline-flex;gap:8px;align-items:center
     }
     .btn{
-      padding:10px 14px;border-radius:999px;
-      border:1px solid var(--line);
+      padding:10px 14px;border-radius:999px;border:1px solid var(--line);
       background:rgba(255,255,255,.75);
       color:var(--txt);
       display:inline-flex;gap:8px;align-items:center;
       cursor:pointer;
       box-shadow:0 4px 16px rgba(16,24,40,.06);
     }
-    .btn.primary{
-      border-color:rgba(14,165,164,.30);
-      background:rgba(14,165,164,.10);
-    }
+    .btn.primary{border-color:rgba(14,165,164,.30);background:rgba(14,165,164,.10)}
     .hero{
       margin-top:14px;
       background:rgba(255,255,255,.78);
@@ -82,7 +75,6 @@
       box-shadow:var(--shadow);
     }
     .small{font-size:12px;color:var(--muted);line-height:1.6}
-    .reviews{margin-top:10px}
     .review{
       border:1px solid var(--line);
       background:rgba(255,255,255,.65);
@@ -92,7 +84,6 @@
     }
     .toprow{display:flex;justify-content:space-between;gap:10px;flex-wrap:wrap;align-items:center}
     .stars{font-weight:900}
-    .name{font-weight:900}
     footer{margin:14px 2px 0;color:var(--muted);font-size:12px;line-height:1.6}
   </style>
 </head>
@@ -104,47 +95,47 @@
       <div class="logo">PP</div>
       <div>
         <div style="font-weight:900">ProfitPilot</div>
-        <div class="pill">Public reviews • Verified app access</div>
+        <div class="pill">Public reviews • Approved only</div>
       </div>
     </div>
     <div style="display:flex;gap:10px;flex-wrap:wrap">
       <a class="btn" href="https://ukwebtools.com/">← Ukwebtools</a>
       <a class="btn" href="index.html">Home</a>
-      <a class="btn" href="login.html">Log in</a>
-      <a class="btn primary" href="app.html">Open app</a>
+      <a class="btn" href="https://ukwebtools.com/privacy.html">Privacy</a>
+      <a class="btn" href="https://ukwebtools.com/terms.html">Terms</a>
+      <a class="btn primary" href="login.html">Log in</a>
     </div>
   </div>
 
   <div class="hero">
     <h1>Reviews</h1>
-    <p>Anyone can read reviews. To submit a review, you’ll need to log in.</p>
+    <p>Anyone can read reviews. To submit a review, log in and use the review box inside the app.</p>
     <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
       <span class="pill" id="avgPill">Loading…</span>
-      <a class="btn" href="login.html">Log in to leave a review</a>
+      <a class="btn primary" href="login.html">Log in to review</a>
+      <a class="btn" href="app.html">Open app</a>
     </div>
   </div>
 
   <div class="grid">
     <div class="card">
-      <div style="font-weight:900">What people say</div>
-      <div class="small">We show approved reviews only. No platform affiliation. No paid endorsements.</div>
-      <div class="reviews" id="list"></div>
-      <div class="small" id="empty" style="margin-top:10px;display:none">No reviews yet. Be the first to leave one.</div>
+      <div style="font-weight:900">All approved reviews</div>
+      <div class="small">Spam/abuse may be removed. We don’t edit review content.</div>
+      <div id="list"></div>
+      <div class="small" id="empty" style="margin-top:10px;display:none">No reviews yet.</div>
     </div>
 
     <div class="card">
-      <div style="font-weight:900">Want to submit a review?</div>
+      <div style="font-weight:900">Leave a review</div>
       <div class="small">
-        Log in, open the app, and submit your review from the right panel.
-        We publish reviews instantly, but spam/abuse may be removed.
+        For trust, reviews are public. To submit, log in → open app → “Leave a review”.
       </div>
       <div style="display:flex;gap:10px;flex-wrap:wrap;margin-top:12px">
         <a class="btn primary" href="login.html">Log in</a>
         <a class="btn" href="app.html">Open app</a>
       </div>
-
-      <div style="margin-top:14px" class="small">
-        Links: <a href="https://ukwebtools.com/terms.html">Terms</a> • <a href="https://ukwebtools.com/privacy.html">Privacy</a>
+      <div class="small" style="margin-top:12px">
+        Support: <a href="mailto:support@ukwebtools.com">support@ukwebtools.com</a>
       </div>
     </div>
   </div>
@@ -160,51 +151,47 @@
 
   const SUPABASE_URL = "https://xsigsftvfknefpdfsyae.supabase.co";
   const SUPABASE_ANON = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhzaWdzZnR2ZmtuZWZwZGZzeWFlIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzAyNzY4NjksImV4cCI6MjA4NTg1Mjg2OX0.Jkkh9Jd46saYBVipN8bxbWhjmhG6mgaFgtTpirKUAWg";
-
   const supabase = createClient(SUPABASE_URL, SUPABASE_ANON);
+
   document.getElementById("yr").textContent = new Date().getFullYear();
 
   function stars(n){
     const s = "★★★★★";
-    return s.slice(0, n) + "☆☆☆☆☆".slice(0, 5-n);
+    n = Math.max(1, Math.min(5, Math.round(n)));
+    return s.slice(0,n) + "☆☆☆☆☆".slice(0,5-n);
   }
+  function safe(t){ return String(t || "").replaceAll("<","&lt;"); }
 
+  const avgPill = document.getElementById("avgPill");
   const list = document.getElementById("list");
   const empty = document.getElementById("empty");
-  const avgPill = document.getElementById("avgPill");
 
   const { data, error } = await supabase
     .from("reviews")
-    .select("name, rating, category, message, created_at")
+    .select("created_at,name,rating,category,message")
     .eq("approved", true)
     .order("created_at", { ascending:false })
-    .limit(50);
+    .limit(60);
 
-  if (error){
+  if (error || !data){
     avgPill.textContent = "Unable to load reviews";
     empty.style.display = "block";
+  } else if (data.length === 0){
+    avgPill.textContent = "No reviews yet";
+    empty.style.display = "block";
   } else {
-    if (!data || data.length === 0){
-      avgPill.textContent = "No reviews yet";
-      empty.style.display = "block";
-    } else {
-      const avg = data.reduce((a,r)=>a+(r.rating||0),0)/data.length;
-      avgPill.textContent = `Average ${avg.toFixed(1)} / 5 • ${data.length} review(s)`;
-
-      list.innerHTML = data.map(r => `
-        <div class="review">
-          <div class="toprow">
-            <div class="name">${(r.name || "Anonymous").replaceAll("<","&lt;")}</div>
-            <div class="stars">${stars(Math.max(1, Math.min(5, r.rating||5)))}</div>
-          </div>
-          <div class="small" style="margin-top:6px">
-            ${r.category ? `<span class="pill">${String(r.category).replaceAll("<","&lt;")}</span>` : ""}
-            <span class="pill">${new Date(r.created_at).toLocaleDateString()}</span>
-          </div>
-          <div style="margin-top:8px">${String(r.message || "").replaceAll("<","&lt;")}</div>
+    const avg = data.reduce((a,r)=>a+(r.rating||0),0)/data.length;
+    avgPill.textContent = `Average ${avg.toFixed(1)} / 5 • ${data.length} review(s)`;
+    list.innerHTML = data.map(r=>`
+      <div class="review">
+        <div class="toprow">
+          <div><b>${safe(r.name || "Anonymous")}</b> <span class="pill">${safe(r.category || "General")}</span></div>
+          <div class="stars">${stars(r.rating||5)}</div>
         </div>
-      `).join("");
-    }
+        <div class="small" style="margin-top:6px">${new Date(r.created_at).toLocaleDateString()}</div>
+        <div style="margin-top:8px">${safe(r.message || "")}</div>
+      </div>
+    `).join("");
   }
 </script>
 </body>
